# game-of-life-python-cli

./: README.md  pyproject.toml
app/: __main__.py  cli.py  grid.py  patterns.py  patterns.toml  views.py
src/: grid.py  patterns.py
