[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-of-life"
dynamic = ["version"]
description = "Conway's Game of Life CLI application"
readme = "README.md"
authors = [{ name = "Kaloyan Ivanov", email = "kaloyan.ivanov88@gmail.com" }]
requires-python = ">= 3.11"

[project.scripts]
gol = "app.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.setuptools.package-data]
'app' = ['*.toml']